OPTION(BUILD_SHARED_LIBS "turn OFF for .a libs" ON)
ADD_LIBRARY(dbook libdbook)
SET_TARGET_PROPERTIES(dbook PROPERTIES LINKER_LANGUAGE C)

SET_TARGET_PROPERTIES(dbook 
PROPERTIES
	SOVERSION 0.1
	VERSION 0.1
)

INSTALL(FILES libdbook.h DESTINATION include)

INSTALL(TARGETS dbook
	LIBRARY DESTINATION lib
)

